--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/bootstrap.css" />
     <link rel="stylesheet" href="./slick/slick.css" />
     <link rel="stylesheet" href="./slick/slick-theme.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   </head>
   <body>
     <nav
@@ -144,7 +146,7 @@
             <div
               class="row h-100 gy-4 justify-content-between align-items-center"
             >
-              <div class="col-lg-7 ms-auto text-end">
+              <div class="col-lg-7 ms-auto text-end" data-aos="fade-up" data-aos-duration="1000">
                 <h1>
                   Sublime Home <br />
                   Upgrades & Installation
@@ -173,7 +175,7 @@
             <div
               class="row h-100 gy-4 justify-content-between align-items-center"
             >
-              <div class="col-lg-7">
+              <div class="col-lg-7" data-aos="fade-up">
                 <h1>
                   Sublime Home <br />
                   Installation
@@ -188,7 +190,7 @@
               </div>
               <!-- <div class="col-lg-5">
                 <img
-                  src="./images/banner-2.png"
+                  src="./images/banner-2.webp"
                   class="w-100"
                   height="auto"
                   style="max-height: 400px; object-fit: contain"
@@ -288,9 +290,9 @@
           following:
         </p>
         <div class="row gx-lg-6 gy-12 g-4">
-          <div class="col-lg-4 col-md-6 col-12">
+          <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-duration="1000">
             <div class="box">
-              <img src="./images/service-1.png" alt="" />
+              <img src="./images/service-1.webp" alt="" />
               <h4 class="service fw-semibold">Free Air Source Heat Pump</h4>
               <p class="description mb-0">
                 Install renewable Energy with an Air Source Heat Pump.
@@ -298,9 +300,9 @@
               <a href="">Learn More</a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-12">
+          <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-duration="1000">
             <div class="box">
-              <img src="./images/service-2.png" alt="" />
+              <img src="./images/service-2.webp" alt="" />
               <h4 class="service fw-semibold">Free Solar Pannels</h4>
               <p class="description mb-0">
                 Installing solar panels can contribute upto 40% of your energy
@@ -309,9 +311,9 @@
               <a href="">Learn More</a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-12">
+          <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-duration="1000">
             <div class="box">
-              <img src="./images/service-3.png" alt="" />
+              <img src="./images/service-3.webp" alt="" />
               <h4 class="service fw-semibold">Free Boiler Upgradation</h4>
               <p class="description mb-0">
                 improve efficiency by replacing old inefficient with A rated
@@ -320,9 +322,9 @@
               <a href="">Learn More</a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-12">
+          <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-duration="1000">
             <div class="box">
-              <img src="./images/service-41.png" alt="" />
+              <img src="./images/service-41.webp" alt="" />
               <h4 class="service fw-semibold">Free central heating</h4>
               <p class="description mb-0">
                 Shifting from old heating ways to latest Central heating system
@@ -331,9 +333,9 @@
               <a href="">Learn More</a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-12">
+          <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-duration="1000">
             <div class="box">
-              <img src="./images/service-5.png" alt="" />
+              <img src="./images/service-5.webp" alt="" />
               <h4 class="service fw-semibold">Free whole house insulation</h4>
               <p class="description mb-0">
                 Sublime Whole House Insulation not only cuts energy bills but
@@ -342,9 +344,9 @@
               <a href="">Learn More</a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-12">
+          <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-duration="1000">
             <div class="box">
-              <img src="./images/service-4.png" alt="" />
+              <img src="./images/service-4.webp" alt="" />
               <h4 class="service fw-semibold">Free smart heating controls</h4>
               <p class="description mb-0">
                 Access the latest technology to control, track and mange your
@@ -364,7 +366,7 @@
 
     <section class="why-us" id="why-us">
       <div class="container">
-        <div class="box">
+        <div class="box" data-aos="fade-up" data-aos-duration="1000">
           <div class="row align-items-center gy-6">
             <div class="col-lg-5">
               <img src="./images/why-choose.png" class="w-100 h-auto" alt="" />
@@ -403,21 +405,21 @@
           </div>
         </div>
         <div class="row gy-12 pt-12">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000">
             <div class="text-center">
               <h4 class="heading">Step 1</h4>
               <img src="./images/funding-1.svg" alt="" />
               <h4 class="heading">Check Your Eligibility</h4>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000">
             <div class="text-center">
               <h4 class="heading">Step 2</h4>
               <img src="./images/funding-2.svg" alt="" />
               <h4 class="heading">Book Your Survey</h4>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000">
             <div class="text-center">
               <h4 class="heading">Step 3</h4>
               <img src="./images/funding-3.svg" alt="" />
@@ -447,7 +449,7 @@
           </div>
         </div>
         <div class="row gy-6 pt-12">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" data-aos-duration="1000">
             <div class="text-center">
               <img
                 src="./images/eligibility-1.svg"
@@ -499,7 +501,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-duration="1000">
             <div class="text-center">
               <img
                 src="./images/eligibility-2.svg"
@@ -551,7 +553,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left" data-aos-duration="1000">
             <div class="text-center">
               <img
                 src="./images/eligibility-3.svg"
@@ -612,7 +614,7 @@
       </div>
     </section>
 
-    <section class="faq" id="faq">
+    <section class="faq" id="faq" data-aos="fade-down" data-aos-duration="1000">
       <div class="container">
         <h3 class="text-center text-primary mb-12">Your Questions Answered</h3>
         <div class="accordion mb-4" id="accordionExample">
@@ -778,7 +780,7 @@
       </div>
     </section>
 
-    <section class="brands" id="brands">
+    <section class="brands" id="brands" data-aos="fade-down" data-aos-duration="1000">
       <div class="container">
         <h2 class="text-center text-primary mb-12">Trusted Brands</h2>
         <div class="trusted-brands">
@@ -822,10 +824,10 @@
           <div class="col-12">
             <div class="background">
               <div class="row align-items-center g-lg-6 g-4">
-                <div class="col-md-6 text-center">
-                  <img src="./images/mark-map.png" alt="" />
+                <div class="col-md-6 text-center" data-aos="fade-right" data-aos-duration="1000">
+                  <img src="./images/mark-map.webp" alt="" />
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                   <ul class="ps-0 list-unstyled d-flex flex-column gap-12">
                     <li>
                       <div class="fs-5 d-flex align-items-center gap-2">
@@ -902,6 +904,10 @@
           },
         ],
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
