--- a/disclaimer.html
+++ b/disclaimer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>How to Qualify - Sublime Energy Services</title>
+    <title>Echo 4 - Sublime Energy Services</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
     <link rel="stylesheet" href="./css/bootstrap.css" />
   </head>
@@ -140,79 +140,31 @@
         </div>
       </div>
     </nav>
-
     <section class="banner about-us">
-      <h1 class="text-center">How to Qualify?</h1>
+      <h1 class="text-center">What is ECO 4?</h1>
     </section>
 
     <section class="banner-2">
       <div class="container">
-        <p class="text-center mb-12">
-          Grant is claimable if in receipt of any of the following benefits:
-        </p>
-        <div class="row gx-4 gy-6">
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="d-flex gap-2">
-              <i class="bi bi-check-circle text-primary"></i>
-              <p class="mb-0">Pension Guarantee Credit</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="d-flex gap-2">
-              <i class="bi bi-check-circle text-primary"></i>
-              <p class="mb-0">Pension Saving Credit</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="d-flex gap-2">
-              <i class="bi bi-check-circle text-primary"></i>
-              <p class="mb-0">House Benefit</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="d-flex gap-2">
-              <i class="bi bi-check-circle text-primary"></i>
-              <p class="mb-0">
-                Income Related Employment & Support Allowance (ESA)
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="d-flex gap-2">
-              <i class="bi bi-check-circle text-primary"></i>
-              <p class="mb-0">Universal Credit (UC)</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="d-flex gap-2">
-              <i class="bi bi-check-circle text-primary"></i>
-              <p class="mb-0">Working Tax Credit (WTC)</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="d-flex gap-2">
-              <i class="bi bi-check-circle text-primary"></i>
-              <p class="mb-0">Income Support (IS)</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="d-flex gap-2">
-              <i class="bi bi-check-circle text-primary"></i>
-              <p class="mb-0">Child Tax Credit (CTC)</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="d-flex gap-2">
-              <i class="bi bi-check-circle text-primary"></i>
-              <p class="mb-0">Child Benefit</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="d-flex gap-2">
-              <i class="bi bi-check-circle text-primary"></i>
-              <p class="mb-0">Income Based Jobseeker's Allowance (JSA)</p>
-            </div>
-          </div>
+        <div class="text-start">
+          <h1>Disclaimer</h1>
+<p>This disclaimer (&#8220;Disclaimer&#8221;) sets forth the general guidelines, disclosures, and terms of your use of the <a href="https://sublimeenergyservices.co.uk">sublimeenergyservices.co.uk</a> website (&#8220;Website&#8221; or &#8220;Service&#8221;) and any of its related products and services (collectively, &#8220;Services&#8221;). This Disclaimer is a legally binding agreement between you (&#8220;User&#8221;, &#8220;you&#8221; or &#8220;your&#8221;) and Sublime Energy Services (&#8220;Sublime Energy Services&#8221;, &#8220;we&#8221;, &#8220;us&#8221; or &#8220;our&#8221;). If you are entering into this Policy on behalf of a business or other legal entity, you represent that you have the authority to bind such entity to this Policy, in which case the terms &#8220;User&#8221;, &#8220;you&#8221; or &#8220;your&#8221; shall refer to such entity. If you do not have such authority, or if you do not agree with the terms of this Policy, you must not accept this Policy and may not access and use the Website and Services. By accessing and using the Website and Services, you acknowledge that you have read, understood, and agree to be bound by the terms of this Disclaimer. You acknowledge that this Disclaimer is a contract between you and Sublime Energy Services, even though it is electronic and is not physically signed by you, and it governs your use of the Website and Services.</p>
+<div class="wpembed-toc"><h3>Table of contents</h3><ol class="wpembed-toc"><li><a href="#representation">Representation</a></li><li><a href="#content-and-postings">Content and postings</a></li><li><a href="#indemnification-and-warranties">Indemnification and warranties</a></li><li><a href="#changes-and-amendments">Changes and amendments</a></li><li><a href="#acceptance-of-this-disclaimer">Acceptance of this disclaimer</a></li><li><a href="#contacting-us">Contacting us</a></li></ol></div><h2 id="representation">Representation</h2>
+<p>Any views or opinions represented on the Website are personal and belong solely to Sublime Energy Services and do not represent those of people, institutions or organizations that Sublime Energy Services may or may not be associated with in professional or personal capacity unless explicitly stated. Any views or opinions are not intended to malign any religion, ethnic group, club, organization, company, or individual.</p>
+<h2 id="content-and-postings">Content and postings</h2>
+<p>You may not modify, print or copy any part of the Website and Services. Inclusion of any part of the Website and Services in another work, whether in printed or electronic or another form or inclusion of any part of the Website and Services on another resource by embedding, framing or otherwise without the express permission of Sublime Energy Services is prohibited. </p>
+<h2 id="indemnification-and-warranties">Indemnification and warranties</h2>
+<p>The accuracy, reliability and completeness of the information and content, distributed through, linked, downloaded or accessed from the Website and Services are guaranteed by Sublime Energy Services. However, all information on the Website is provided &#8220;as is&#8221;, with no guarantee of the results obtained from the use of this information, and without warranty of any kind, express or implied. In no event will Sublime Energy Services be liable to you or anyone else for any decision made or action taken in reliance on the information on the Website, or for any consequential, special or similar damages, even if advised of the possibility of such damages. Information on the Website is for general information purposes only and is not intended to provide any type of professional advice. Please seek professional assistance should you require it. Information contained on the Website are subject to change at any time and without warning.</p>
+<h2 id="changes-and-amendments">Changes and amendments</h2>
+<p>We reserve the right to modify this Disclaimer or its terms related to the Website and Services at any time at our discretion. When we do, we will revise the updated date at the bottom of this page. We may also provide notice to you in other ways at our discretion, such as through the contact information you have provided.</p>
+<p>An updated version of this Disclaimer will be effective immediately upon the posting of the revised Disclaimer unless otherwise specified. Your continued use of the Website and Services after the effective date of the revised Disclaimer (or such other act specified at that time) will constitute your consent to those changes.</p>
+<h2 id="acceptance-of-this-disclaimer">Acceptance of this disclaimer</h2>
+<p>You acknowledge that you have read this Disclaimer and agree to all its terms and conditions. By accessing and using the Website and Services you agree to be bound by this Disclaimer. If you do not agree to abide by the terms of this Disclaimer, you are not authorized to access or use the Website and Services. </p>
+<h2 id="contacting-us">Contacting us</h2>
+<p>If you have any questions, concerns, or complaints regarding this Disclaimer, we encourage you to contact us using the details below:</p>
+<p><a href="https://sublimeenergyservices.co.uk/contact.html">https://sublimeenergyservices.co.uk/contact.html</a><br/><a href="&#109;&#097;&#105;&#108;&#116;&#111;&#058;inf&#111;&#64;&#115;ubl&#105;me&#101;n&#101;r&#103;&#121;&#115;e&#114;v&#105;ce&#115;.&#99;o.&#117;k">&#105;n&#102;&#111;&#64;sub&#108;ime&#101;&#110;erg&#121;&#115;e&#114;&#118;ic&#101;&#115;&#46;&#99;&#111;&#46;u&#107;</a><br/>Nano park, 6 Flanshaw Way, Kelley way, Wakefield WF2 9FW, United Kingdom</p>
+<p>This document was last updated on October 2, 2023</p>
+
         </div>
       </div>
     </section>
@@ -299,7 +251,6 @@
           </div>
       </div>
     </section>
-
     <script src="./js/jquery-3.7.0.js"></script>
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
